FIX: styling delete button and overflow-y of cards

--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@
 }
 
 body {
-    font-family: montserrat;
+    font-family: 'montserrat';
     min-height: 100vh;
     display: grid;
     grid-template-columns: min(250px) 1fr;
-    grid-template-rows: 100px 1fr 75px;
+    grid-template-rows: 100px 1fr 50px;
 }
 
 button {
@@ -130,16 +130,16 @@ main .books-container .card {
 }
 
 main h1 {
-    margin: 10px 10px 15px 10px;
     text-align: center;
 }
 
 main .books-container {
     height: 100%;
-    padding: 0 10px;
+    padding: 10px 10px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: repeat(auto-fill, 210px);
+    overflow-y: auto;
     gap: 15px;
     align-items: center;
     justify-content: center;
@@ -163,6 +163,6 @@ footer {
     grid-row: 3 / 4;
     text-align: center;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
